# python_blog

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt
bookscraper/: bookscraper.dockerfile
bookscraper/bookscraper/: __init__.py  items.py  middlewares.py  pipelines.py  settings.py
bookscraper/bookscraper/spiders/: bookspider.py
configs/: mysql.env
src/2025/05_May/package1/: module1.py
src/2025/06_June/database/: __init__.py  base.py  schema.py
src/2025/07_July/: config_meta.py  dicts_on_steroids.ipynb  dispatch.py  dispatch_essentials.ipynb
src/2025/09_September/asyncio_essentials/: 01_synchronous_implementation.py  02_custom_asynchronous_implementation.py  03_httpx_asynchronous_implementation.py  04_asynchronous_multiprocess_implementation.py  coroutines_tasks.py
src/2025/09_September/asyncio_essentials/intro/: coroutines_tasks.py  futures.py
src/2025/09_September/idiomatic_python/: 01_collections.ipynb  02_itertools.ipynb  03_hashmaps.ipynb
src/2025/09_September/multiprocessing_essentials/: 01_intro.py  02_control_flow.py  03_process_pool_executor_futures.py  04_process_pool_executor_as_completed.py  05_process_pool_executor_map.py  06_multiprocessing_real_case.py
src/2025/August/: debug_logging_utils.py  descriptor_registry.py  logger_config.yaml  logging.ipynb  sqlalchemy_log_config.yaml
src/2025/July/webscraping/: playwright_options.py  selenium_options.py
src/2025/June/database/: __init__.py  base.py  database.dockerfile  schema.py
src/2025/May/: wrapt_library.ipynb
src/bookscraper/: bookscraper.dockerfile
src/bookscraper/bookscraper/: middlewares.py  pipelines.py  settings.py
src/bookscraper/bookscraper/spiders/: bookspider.py
src/bookstore_api/: __main__.py  bookstore_api.dockerfile
tests/: test_config_meta.py  test_csv_batch_reader.py  test_descriptor_registry.py  test_dispatcher.py  test_engine.py  test_log_decorator.py
year/2025/July/selenium_playground/: options.py
year/2025/June/: requests_library.ipynb
year/2025/June/database/: __init__.py  base.py  local.env  schema.py
year/2025/May/: csv_batch_reader.py  csv_reader.py  file.ipynb  icecream_library.ipynb  wrapt_library.ipynb
year/2025/May/data/: new_sample_data.csv  sample_data.csv
