[project]
name = "python_blog"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "wrapt",
    "dateutils",
    "dotenv",
    "sqlalchemy",
    "pymysql",
    "cryptography",
    "ipython",
    "icecream",
    "aiofiles",
    "benedict[all]",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "black[jupyter]",    # Optional, Ruff can format too
    "pre-commit",
    "commitizen",
    "jupyter",
]

# Black formatting settings
[tool.black]
line-length = 120
target-version = ['py313']
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |\.json
  |\.md
  |\.venv
)/
'''

# Ruff linter settings
[tool.ruff]
line-length = 120
target-version = "py313"
# Files/folders to exclude from linting
exclude = [
    ".git",
    ".venv",
    "migrations",
    "__pycache__",
    "*.md",
    "*.ini",
    "*.toml",
    ".*sh",
]

[tool.ruff.lint]
ignore = []
select = ["B", "B9", "C", "E", "F", "I", "W", "T"]

[tool.ruff.lint.mccabe]
max-complexity = 10

# Optional: pytest settings
[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

# Commitizen settings
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version"
]

# Setuptools settings
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
